--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     --main-color: #0065FC;
     --main-bg-color: #F2F2F2;
     --filter-bg-color: #DEEBFF;
+    --filter-btn-color: #D9D9D9;
 }
 
 .fa-solid {
@@ -31,6 +32,9 @@ a {
     color: inherit;
     text-decoration: none;
 }
+
+
+
 
 
 header {
@@ -85,19 +89,21 @@ nav a{
 }
 
 .search-left {
+    /* flex */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     width: 50px;
     border: 1px var(--main-bg-color);
     border-radius: 15px 0px 0px 15px;
     background-color: var(--main-bg-color);
 }
 
-.local-svg {
-    height: 18px;
-    width: 14px;
-    position: relative;
-    top: 15px;
-    left: 18px;
-  }
+.resize-18{
+     /* resize localization FA icon to height 18px */
+    font-size: 1.125rem;
+}
 
 .container-form {
     display: flex;
@@ -152,15 +158,56 @@ nav a{
     /* display:none; all but mobile users */
 }
 
-.button-search-right-mini img {
-/* SVG size */
-    height: 17px;
-    width: 17px;
-    /* display:none; all but mobile users */
+.filter-container{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
+.button-filter{
+  /* button */
+  cursor: pointer;
+  height: 50px;
+  margin: 0; 
+  /*border: 2px var(--filter-btn-color);*/
+  border: 2px solid var(--filter-btn-color);
+    border-radius: 25px;
+  background-color: transparent;
+  padding: 4px 19px;
 
+/* text */
+  color:black;
+  font-size: 18px;
+  font-weight:700;    
+}
 
+.button-filter i {
+    margin-right: 10px;
+}
+
+.button-filter:hover {
+    background-color: var(--filter-bg-color);
+}
+
+.info-bar {
+    display: flex;
+    align-items: center;    
+    height: 24px;
+    margin: 30px 0px;
+}
+
+.info-left {
+    width: 24px;
+    border: 1px solid var(--filter-btn-color);
+    border-radius: 12px;
+    margin-right: 10px;
+    height: 100%;
+/* flex */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 .card {
