--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,16 @@
     --filter-btn-color: #D9D9D9;
 }
 
-.fas {
+.color-main{
     color: var(--main-color);
+}
+
+.color-white{
+    color:white;
+}
+
+.color-black{
+    color:black;
 }
 
 
@@ -213,11 +221,24 @@ nav a{
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 .card {
     background-color: white;
     border-radius: 20px;
     padding: 5px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.1);
+    /*filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));*/
 }
 
 .card img {
@@ -244,7 +265,7 @@ nav a{
 
 .hebergements-and-populaires section {
     background-color: var(--main-bg-color);
-    border-radius: 20px;
+    border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
 }
@@ -257,17 +278,19 @@ nav a{
 /****** Populaires ***********/
 .populaires {
     width: 32%;
+    gap: 30px;
 }
 
 .populaires-title {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 
-.populaires-cards .card {
+.populaires-cards .card{
     display: flex;
-    margin-top: 33px;
+
 }
 
 .populaires-cards img {
