All cards Hébergements

--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ nav a{
   margin: 0; 
   /*border: 2px var(--filter-btn-color);*/
   border: 2px solid var(--filter-btn-color);
-    border-radius: 25px;
+  border-radius: 25px;
   background-color: transparent;
   padding: 4px 19px;
 
@@ -241,15 +241,23 @@ nav a{
 }
 
 .card img {
-    object-fit: cover;
+    object-fit: cover;                                                                                                                                                        
 }
 
 .card-title {
     font-size: 16px;
 }
 
+.card-subtitle {
+    font-size: 14px;
+}
+
 .euro {
-    font-weight: 700;
+    font-weight: 600;
+}
+
+.card-rating{
+    font-size: 13.25px; /* size of star */
 }
 
 .neutral-star {
@@ -285,11 +293,18 @@ nav a{
     width: 100%;
 }
 
+/*.hebergements-cards a {
+    width: 29.5%;
+}*/ 
+
 .hebergements-cards .card {
     display: flex;
     flex-direction: column;
-    height: 197.25px;
     width: 240px;
+    /*width: 100%; fills the parent a not working*/
+    height: 192.25px;
+    gap: 4px;
+    padding-bottom: 10px;
 }
 
 .hebergements-cards img {
@@ -297,30 +312,33 @@ nav a{
     width: 100%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+    border: 5px;
 }
 
 .hebergements-cards .card-content {
-    padding: 0px 15px;
     display: flex;
-    height: 64.25px;
     flex-direction: column;
     justify-content: space-between;
+    padding: 0px 15px;
+    gap: 8px;
   /*   box-sizing: border-box;*/
 }
 
 .hebergements-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-bottom: 0px;
     font-weight: 700;
 }
 
 .hebergements-cards .card-subtitle {
-    margin-bottom: 5px;
+    /*margin-bottom: 5px;*/
+    margin: 0;
 }
 
 .hebergements-footer {
     font-size: 18px;
     font-weight: 700;
+    margin: 0;
 }
 /****** Populaires ***********/
 .populaires {
