activities and footer implemented

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    margin:0;
 }
 
 :root {
@@ -21,28 +22,35 @@
 .color-black {
     color:black;
 }
-
+/*
 body {
-    display: flex;
-    justify-content: center;
-    margin: 0px;
-}
+    /*display: flex;*/
+    /*justify-content: center;*/
+    /*margin: 0;
+}*/
 
 .main-container {
     width: 100%;
-    max-width: 1440px;
+    max-width: 1440px; /* nothing happens if width is superior*/
     padding: 0 50px;
     box-sizing: border-box; /* borders and paddings are included */   
 }
+
+
+h1 {
+    font-size: 22px;
+    font-weight: 700;
+ }
+
+ h5 {
+    font-size: 16px;
+    font-weight: 400;  
+ }
 
 a {
     color: inherit;
     text-decoration: none;
 }
-
-
-
-
 
 header {
     display: flex;
@@ -50,6 +58,7 @@ header {
     height: 79px;
     margin-bottom: 30px;
 }
+
 
 .booki {
     height: 19px;
@@ -75,26 +84,27 @@ nav a{
     color: var(--main-color);
 }
 
+
+.info{
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 35px;
+    margin-bottom: 35px;   
+}
+
 .headline {
     height: 53px;
 }
 
 .section-title {
-    margin: 0;
-    font-size: 22px;
-    font-weight:700;
-    height:26px;
-}
-
-.link-footer {
-    margin: 0;
-    height: 19px;
+    padding-bottom: 8px;
 }
 
 .search-bar {
     display: flex;
     height: 49px;
-    margin: 30px 0px;
+    margin: 0;
 }
 
 .search-left {
@@ -168,10 +178,11 @@ nav a{
     /* display:none; all but mobile users */
 }
 
-.filter-container {
+.filters {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    /*flex-wrap: wrap;*/
+    height: 50px;
     gap: 10px;
 }
 
@@ -180,7 +191,6 @@ nav a{
   cursor: pointer;
   height: 50px;
   margin: 0; 
-  /*border: 2px var(--filter-btn-color);*/
   border: 2px solid var(--filter-btn-color);
   border-radius: 25px;
   background-color: transparent;
@@ -204,7 +214,7 @@ nav a{
     display: flex;
     align-items: center;    
     height: 24px;
-    margin: 30px 0px;
+    margin: 0;
 }
 
 .info-left {
@@ -240,6 +250,8 @@ nav a{
     /*filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));*/
 }
 
+
+
 .card img {
     object-fit: cover;                                                                                                                                                        
 }
@@ -268,6 +280,7 @@ nav a{
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 35px; 
 }
 
 
@@ -381,6 +394,57 @@ nav a{
     margin: 0;
 }
 
+.activities-all {
+    width: 100%;
+    margin-bottom: 35px; 
+}
+
+.activities-cards {
+    display: flex;
+    gap: 30px;
+    width: 100%;
+}
+
+.activity-card {
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    width: 312px;
+    height: 439px;
+}
+
+
+.activity-card img {
+    height: 380px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;                                                                                                                                                       
+}
+
+
+
+.activities-text {
+    padding: 20px 19px;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 700;
+
+}
+
+footer {
+    display: flex;
+    background-color: var(--main-bg-color);
+    margin-top: 35px;
+}
+
+.footer-container{
+    display: flex;
+    flex-direction: column;
+    width: 33%;    
+    padding: 20px;
+    gap: 15px;
+}
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
