--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
 }
 
 :root {
-    --main-color: #0065FC;
-    --main-bg-color: #F2F2F2;
-    --filter-bg-color: #DEEBFF;
-    --filter-btn-color: #D9D9D9;
+    --blue-color: #0065FC;
+    --main-grey-color: #F2F2F2;
+    --light-blue-color: #DEEBFF;
+    --light-grey-color: #D9D9D9;
 }
 
 .color-main {
-    color: var(--main-color);
+    color: var(--blue-color);
 }
 
 .color-white {
@@ -21,22 +21,6 @@
 
 .color-black {
     color:black;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-}
-
-.body-container {
-    width: 100%;
-    max-width: 1440px; /* nothing happens if width is superior*/
-    padding: 0 50px;
-    box-sizing: border-box; /* borders and paddings are included */   
-}
-
-main {
-    width: 100%;
 }
 
 h1 {
@@ -49,7 +33,12 @@ h2 {
     font-weight: 700;
 }
 
- h4 {
+h3 {
+    font-size: 17px;
+    font-weight: 700;  
+}
+
+h4 {
     font-size: 16px;
     font-weight: 700;  
     margin-block-start: 0px;
@@ -58,12 +47,40 @@ h2 {
 h5 {
     font-size: 16px;
     font-weight: 400;  
- }
+}
+
+h6 {
+    font-size: 14px;
+    font-weight: 400;     
+}
 
 a {
     color: inherit;
     text-decoration: none;
 }
+
+/* all remains centered horizontally even if width > 1440px */
+body {
+    display: flex;
+    justify-content: center; 
+}
+
+.body-container {
+    width: 100%;
+    max-width: 1440px; /* nothing happens if width is superior*/
+    padding: 0 50px; 
+    box-sizing: border-box; /* borders and paddings are included in the box */   
+}
+
+main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 35px;
+    margin-bottom: 35px;
+}
+
+
 
 header {
     display: flex;
@@ -72,8 +89,7 @@ header {
     margin-bottom: 30px;
 }
 
-
-.booki {
+.logo-booki {
     height: 19px;
     padding: 30px 0px;
 }
@@ -88,12 +104,12 @@ nav {
 nav a{
     padding: 16px 0px;
     border-top: 2px solid transparent;
-    border-bottom: 2px solid transparent;
+    /*border-bottom: 2px solid transparent;*/
 }
 
 .nav-title:hover {
-    border-top: 2px solid var(--main-color);
-    color: var(--main-color);
+    border-color: var(--blue-color);
+    color: var(--blue-color);
 }
 
 
@@ -102,7 +118,7 @@ nav a{
     flex-direction: column;
     justify-content: space-between;
     gap: 35px;
-    margin-bottom: 35px;   
+/*    margin-bottom: 35px;   6324*/
 }
 
 .headline {
@@ -117,7 +133,6 @@ nav a{
     height: 49px;
     width: 375px;
     margin: 0;
-    
     border-radius: 15px;
 }
 
@@ -126,10 +141,10 @@ nav a{
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid var(--main-bg-color);
+    border: 1px solid var(--main-grey-color);
     width: 50px;
     border-radius: 15px 0px 0px 15px;
-    background-color: var(--main-bg-color);
+    background-color: var(--main-grey-color);
 }
 
 .resize-18 {
@@ -141,8 +156,8 @@ nav a{
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid var(--main-bg-color);
-    border-bottom: 1px solid var(--main-bg-color);
+    border-top: 1px solid var(--main-grey-color);
+    border-bottom: 1px solid var(--main-grey-color);
 }
 
 #city-search-id {
@@ -169,9 +184,9 @@ nav a{
     cursor: pointer;
     width: 132px;
     margin: 0; 
-    border: 1px solid var(--main-color);
+    border: 1px solid var(--blue-color);
     border-radius: 0px 15px 15px 0px;
-    background-color: var(--main-color);
+    background-color: var(--blue-color);
 /* text */
     color:white;
     font-size: 18px;
@@ -184,14 +199,14 @@ nav a{
     display: flex;
     justify-content: center;
     align-items: center;
-    /*border: 1px solid var(--main-bg-color);*/
+    /*border: 1px solid var(--main-grey-color);*/
     border-radius: 0px 15px 15px 0px;
  /* button */   
     cursor: pointer;
     width: 49px;
-    border: 1px var(--main-color);
+    border: 1px var(--blue-color);
     border-radius: 15px;
-    background-color: var(--main-color);
+    background-color: var(--blue-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     display:none; /* only for mobile users */
 }
@@ -199,7 +214,8 @@ nav a{
 .filters {
     display: flex;
     align-items: center;
-    gap: 15px;
+    column-gap: 15px;
+    row-gap: 20px;
 }
 
 .filter-buttons{
@@ -208,13 +224,12 @@ nav a{
     gap: 15px;  
 }
 
-
 .button-filter {
   /* button */
   cursor: pointer;
   height: 50px;
   margin: 0; 
-  border: 2px solid var(--filter-btn-color);
+  border: 2px solid var(--light-grey-color);
   border-radius: 25px;
   background-color: transparent;
   padding: 4px 19px;
@@ -230,22 +245,22 @@ nav a{
 }
 
 .button-filter:hover {
-    background-color: var(--filter-bg-color);
+    background-color: var(--light-blue-color);
 }
 
 .info-bar {
     display: flex;
     align-items: center;    
-    height: 24px;
     margin: 0;
+    height:auto;
 }
 
 .info-left {
     width: 24px;
-    border: 1px solid var(--filter-btn-color);
+    border: 1px solid var(--light-grey-color);
     border-radius: 12px;
     margin-right: 10px;
-    height: 100%;
+    height: 24px;
 /* flex */
     display: flex;
     justify-content: center;
@@ -281,18 +296,18 @@ nav a{
 }
 
 .neutral-star {
-    color: var(--main-bg-color)
+    color: var(--main-grey-color)
 }
 
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 35px; 
+ /*   margin-bottom: 35px; 6324*/
 }
 
 .hebergements-and-populaires section {
-    background-color: var(--main-bg-color);
+    background-color: var(--main-grey-color);
     border-radius: 15px;
     padding: 30px;
     box-sizing: border-box;
@@ -304,6 +319,7 @@ nav a{
     flex-direction: column;
     justify-content: space-between;
     width: 65%; /*OK pour avoir la gap de 40 px entre les deux sections*/
+ /*   gap: 30px; 6324*/
 }
 
 .hebergements-cards {
@@ -365,10 +381,15 @@ nav a{
     align-items: center;
 }
 
+.populaires-cards {
+    gap: 30px;
+}
+
 .populaires-cards .card {
     display: flex;
-    margin-top: 33px;
 }
+
+
 
 .populaires-cards img {
     width: 33%;
@@ -405,7 +426,7 @@ nav a{
     display: flex;
     gap: 30px;
     width: 100%;
-    margin-top: 30px;
+/*    margin-top: 30px; 6324*/
 }
 
 .activity-card {
@@ -432,8 +453,8 @@ nav a{
 
 footer {
     display: flex;
-    background-color: var(--main-bg-color);
-    margin-top: 35px; /* gap 35px on all media parts */
+    background-color: var(--main-grey-color);
+/*    margin-top: 35px; 6324*//* gap 35px on all media parts */
 }
 
 .footer-container{
@@ -468,12 +489,13 @@ footer {
 
     .hebergements {
         width: 100%;
-        gap:30px;
+        gap: 30px;
     }
 
     .populaires {
         width: 100%;
-        margin-top: 50px;
+        gap: 20px;
+        /*margin-top: 50px;*/
     }
 
     .populaires-cards {
@@ -507,18 +529,13 @@ footer {
 @media screen and (min-width: 320px) and (max-width: 767.98px) {
 
     .body-container {
-        width: 100%;
         padding: 0;
-        box-sizing: border-box; /* borders and paddings are included */   
     }
-
-
 
     header{
         flex-direction: column;
         height: 115px;
         align-items: center;
-       /* margin-bottom: 35px; /* 35px instead of 30px for mobile */
     }
   
     .booki {
@@ -537,7 +554,7 @@ footer {
     }
     
     .nav-title:hover {
-        border-bottom: 2px solid var(--main-color);
+        border-bottom: 2px solid var(--blue-color);
         border-top: 0px solid transparent;
         
     }
@@ -562,8 +579,8 @@ footer {
     .mini-button-container{
         display: flex;
         border-radius: 0px 15px 15px 0px;
-        border-top: 1px solid var(--main-bg-color);
-        border-bottom: 1px solid var(--main-bg-color);
+        border-top: 1px solid var(--main-grey-color);
+        border-bottom: 1px solid var(--main-grey-color);
     }
         
     .button-search-right-mini {
@@ -578,13 +595,14 @@ footer {
 
     .filter-buttons{
         flex-wrap: wrap;
-        gap: 20px;
+        column-gap: 10px;
+        row-gap: 20px;
     }
 
     .button-filter{
         width: 200.5px;
+        font-size: 14px;
     }
-
 
     .hebergements-and-populaires {
         flex-direction: column-reverse;
@@ -592,22 +610,29 @@ footer {
     
     .hebergements-and-populaires section {
         border-radius: 0px;
-        background-color: transparent;
     }
 
     .populaires {
-        background-color: var(--main-bg-color);
+        /*background-color: var(--main-grey-color);*/
         width: 100%;
+        gap: 15px;
+
     }
 
     .populaires-cards {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        gap: 15px;
+    }
+
+    .populaires-cards .card {
+        margin-top: 0px;
     }
 
     .hebergements{
         width: 100%;
+        background-color: transparent !important;
         padding: 20px;
         gap: 15px;
     }
@@ -624,9 +649,6 @@ footer {
         flex-direction: column;
         width: 100%;
     }
-
-
-
 
 
     .activities-cards {
@@ -648,7 +670,7 @@ footer {
     footer {
         flex-direction: column;
         width: 100%;
-        background-color: var(--main-bg-color);
+        background-color: var(--main-grey-color);
         padding: 30px;
         gap: 50px;
     }
@@ -657,7 +679,5 @@ footer {
         width: 100%;    
         padding: 0px;
         gap: 15px;
-
     }
-
 }
