--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 /****** General ***********/
+
+/* les balises sémantiques ont été utilisées et les margin par défaut supprimées */
+
 * {
     font-family: 'Raleway', sans-serif;
     margin:0;
+    
 }
 
 :root {
@@ -55,8 +59,8 @@ h6 {
 }
 
 a {
-    color: inherit;
-    text-decoration: none;
+    color: inherit; /* to keep parent color */
+    text-decoration: none; /* to avoid link specific colors */
 }
 
 body {
@@ -80,7 +84,11 @@ main {
 }
 
 
-/****** Header ******/
+/****** Header *************************/
+/*
+/* flex logo on the left nav on the right
+/*
+****************************************/
 header {
     display: flex;
     justify-content: space-between;
@@ -93,6 +101,10 @@ header {
     padding: 30px 0px;
 }
 
+/****** Nav ******************************/
+/*  flex with a transparent border top 
+/*  text and border becoming blue on hover
+******************************************/
 nav {
     display: flex;
     justify-content: space-between;
@@ -110,7 +122,13 @@ nav a{
     color: var(--blue-color);
 }
 
-/****** Infos ******/
+/****** Infos ********************************************/
+/*
+/* column flex with headline, search, filters and info-bar
+/*
+**********************************************************/
+
+
 .info{
     display: flex; 
     flex-direction: column;
@@ -125,7 +143,11 @@ nav a{
     gap: 8px;
 }
 
-  /* search-bar begin */
+/****** search bar ********************************************/
+/*
+/*  flex with search left, container-form, 2 buttons search right (desktop+tablet and mobile)
+/*
+**********************************************************/
 .search-bar {
     display: flex;
     height: 49px;
@@ -135,7 +157,7 @@ nav a{
 }
 
 .search-left {
-    /* flex */
+    /* flex with a fontawesome icon centered */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,6 +172,12 @@ nav a{
     font-size: 1.125rem; /* resize localization FA icon to height 18px */
 }
 
+
+/****** form ********************************************/
+/*
+/*  flex container for borders and form is centered
+/*
+**********************************************************/
 .container-form {
     display: flex;
     justify-content: center;
@@ -172,6 +200,14 @@ nav a{
     opacity: 1; /* mozilla compatibility */
 }
 
+/******button search *************************************/
+/*
+/*  flex button with text centered 
+/*  flex button with icon centered and not displayed
+/*
+**********************************************************/
+
+
 .button-search-right {
  /* flex */
     display: flex;
@@ -190,26 +226,18 @@ nav a{
     font-weight:700;
     /*display:none;  mobile users */
  }
- 
-.button-search-right-mini {
- /* flex */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /*border: 1px solid var(--main-grey-color);*/
-    border-radius: 0px 15px 15px 0px;
- /* button */   
-    cursor: pointer;
-    width: 49px;
-    border: 1px var(--blue-color);
-    border-radius: 15px;
-    background-color: var(--blue-color);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    display: none; /* only for mobile users */
-}
-  /* search-bar end */
 
-  /* filter begin */
+ .mini-button-container{
+    display:none;
+ }
+ 
+
+/****** filters *************************************/
+/*
+/*  flex with a title and a flex of 4 button filters
+/*  a filter is a button with an awesome icon and text
+/*
+**********************************************************/
 .filters {
     display: flex;
     align-items: center;
@@ -247,7 +275,11 @@ nav a{
     background-color: var(--light-blue-color);
 }
 
-  /* Infos bar */
+ /****** info bar *************************************/
+/*
+/*  flex with an awesome icon and text
+/*
+**********************************************************/
 .info-bar {
     display: flex;
     align-items: center;    
@@ -267,9 +299,13 @@ nav a{
     margin-right: 10px;
     height: 24px;
 }
-  /* info-bar end */
 
- /****** CARDS ******/ 
+
+/****** CARDS ***********************************************************/ 
+/*
+/*  cards are a container made of a picture, a title, subtitle and stars
+/*
+*************************************************************************/
 .card {
     background-color: white;
     border-radius: 20px;
@@ -303,10 +339,15 @@ nav a{
 }
 
 
-/****** Hebergements And Populaires ******/
+/****** hebergements-and-populaires ***********************************************************/ 
+/*
+/*  a flex made of two sections 
+/*
+*************************************************************************/
 .hebergements-and-populaires {
     display: flex;
     justify-content: space-between;
+    row-gap: 50px;
 }
 
 .hebergements-and-populaires section {
@@ -317,11 +358,15 @@ nav a{
 }
 
 /****** Hebergements *****/
+/*  
+/*   flex made of title, cards container and footer
+/*
+**************************/
 .hebergements {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 65%; /*OK pour avoir la gap de 40 px entre les deux sections*/
+    width: 65%; /*OK to get the 40 px gap between both sections*/
     row-gap: 30px;
 }
 
@@ -427,6 +472,11 @@ nav a{
 
 
 /****** activities ******/
+/*
+/* flex with a title and a flex of 4 cards
+/*
+/************************/
+
 .activities {
     display: flex;
     flex-direction: column;
@@ -465,6 +515,11 @@ nav a{
 }
 
 /****** footer ******/
+/*
+/* a flex made of 3 flex container
+/*
+/********************/
+
 footer {
     display: flex;
     background-color: var(--main-grey-color);
@@ -487,10 +542,17 @@ footer {
     .hebergements-cards .card-subtitle {
         font-size: 13px;
     }
+}
 
-   }
+
+/******** TABLETS**************/
+/*
+/*    filters title is above
+/*    hebergements and populaires are not side by side
+/*    populaires cards are redefined as 3 in one row
+/*
+/******************************/
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-
     .filters {
         flex-direction: column;
         align-items: normal;
@@ -508,7 +570,6 @@ footer {
     .populaires {
         width: 100%;
         gap: 20px;
-        /*margin-top: 50px;*/
     }
 
     .populaires-cards {
@@ -530,7 +591,7 @@ footer {
     }
 
     .activity-card img{
-        height: 200px;
+        height: 200px; /* activity card are less high */
     }
 
     footer{
@@ -538,20 +599,33 @@ footer {
     }
 }
 
-/* Small devices (phones, less than 768px) */
+
 @media screen and (min-width: 768px) and (max-width: 836px) {
     .button-filter{
-        font-size: 14px;        
+        font-size: 14px; /* to fit in button */     
     }
 }
 
 
 /* Small devices (phones, less than 768px) */
+/*
+/*  no padding left and right
+/*  header flex in column
+/*  nav in two equal parts
+/*  magnifying glass replaces 'rechercher'
+/*  filters have same width and flex is wrap
+/*  populaires is above (column-reverse)
+/*  activities are now in column
+/*  footer parts are now in
+/*
+**********************************************/
+
 @media screen and (min-width: 320px) and (max-width: 767.98px) {
 
     .body-container {
         padding: 0;
     }
+
 
     header{
         flex-direction: column;
@@ -561,7 +635,15 @@ footer {
   
     .booki {
         padding: 30px 50px;
-    }  
+    } 
+    
+    /******* nav ************/
+    /*
+    /* both take half of the screen
+    /* border top is transparent
+    /* border bottom is on the container and not the link
+    /*
+    /***********************/
 
     nav {
         width: 100%;
@@ -577,7 +659,6 @@ footer {
     .nav-title:hover {
         border-bottom: 2px solid var(--blue-color);
         border-top: 0px solid transparent;
-        
     }
 
     .info{
@@ -597,17 +678,34 @@ footer {
         display :none;
     }
 
+    /*******search button*******/
+    /*  rechercher button is replaced by a magnifying class button
+    /*
+    /***************************/
+
     .mini-button-container{
         display: flex;
         border-radius: 0px 15px 15px 0px;
         border-top: 1px solid var(--main-grey-color);
         border-bottom: 1px solid var(--main-grey-color);
     }
-        
-    .button-search-right-mini {
-        display: flex; /* only for mobile users */
-    }
 
+    .button-search-right-mini {
+        /* flex */
+           justify-content: center;
+           align-items: center;
+           border-radius: 0px 15px 15px 0px;
+        /* button */   
+           cursor: pointer;
+           width: 49px;
+           border: 1px var(--blue-color);
+           border-radius: 15px;
+           background-color: var(--blue-color);
+           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+           display: flex; /* only for mobile users */
+       }
+        
+/*  filters have same width and flex is wrap */
 
     .filters {
         flex-direction: column;
@@ -623,7 +721,6 @@ footer {
     .button-filter{
         width: 162.5px;
         font-size: 14px;
-        
     }
 
     .hebergements-and-populaires {
@@ -637,7 +734,6 @@ footer {
     .populaires {
         width: 100%;
         gap: 15px;
-
     }
 
     .populaires-cards {
